# vortex-by-cursor-ai

./: .gitignore  .gitmessage  CONTRIBUTING.md  DOCUMENTATION-UPDATE.md  README-blockchain.md  README.md  TOLA-Architecture.md  TOLA-README.md  VORTEX-STRUCTURE.md  add_ai_features.ps1  add_user_journey.ps1  archive-vortex-artist.php  archive-vortex-artwork.php  artist-demo.html  artist-single.php  artwork-single.php  audit-demo.ps1  check_push_status.ps1  check_results.ps1  class-vortex-ai-communications.php  class-vortex-ai-coordinator.php  class-vortex-ai-learning.php  class-vortex-analytics.php  class-vortex-business-strategist.php  class-vortex-cloe.php  class-vortex-collector-tracking.php  class-vortex-gamification.php  class-vortex-huraii-format-processors.php  class-vortex-huraii-sharing.php  class-vortex-huraii.php  class-vortex-i18n.php  class-vortex-img2img.php  class-vortex-language-db.php  class-vortex-metrics.php  class-vortex-model-loader.php  class-vortex-rankings.php  class-vortex-security.php  class-vortex-smart-contract-validator.php  class-vortex-smart-contract.php  class-vortex-support-chat.php  (+70 more)
admin/: class-thorius-learning-dashboard.php  class-vortex-admin-menus.php  class-vortex-admin.php  class-vortex-ai-marketplace-admin.php  class-vortex-ai-marketplace-ajax.php  (+7 more)
vortex-contracts/: Cargo.toml  README.md
vortex-contracts/src/: events.rs  lib.rs
vortex-contracts/src/governance/: mod.rs
vortex-contracts/src/marketplace/: mod.rs
vortex-contracts/src/tests/: integration_tests.rs  mod.rs
vortex-contracts/src/token/: mod.rs  tests.rs
(+873 files in other folders)
