[package]
name = "vortex-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for the VORTEX AI Marketplace"
authors = ["VORTEX Team"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.50"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
base64 = "0.21.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.28.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]
